Functional garch_model.py with unexpected forecast correlation

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-''
+# =======================================
+# Python general
+# =======================================
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pdb
+*.pkl
+*.so
+*.egg-info/
+*.egg
+*.log
